# gslides_ai

./: .gitignore  README.md  add_architecture_slide.py  gslides_ai.spec  main.py  pyproject.toml
.github/workflows/: release.yml
examples/: insurance_deck.py  snowflake_best_saas.py
scripts/: build.sh  create_dmg.sh
src/gslides_ai/: __init__.py  app.py  auth.py  cli.py  deck_builder.py  slides.py  styling.py  updater.py
